Project

General

Profile

Actions

Bug #24637

closed

ImageCtx.cc: 160: FAILED assert(image_watcher == __null) when opening nonexistent snapshot

Added by Mykola Golub almost 6 years ago. Updated almost 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If snap_set fails in image::OpenRequest, it needs to close the already opened image before returning the error. Otherwise the assert is triggered when trying to delete the image context.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #24698: mimic: ImageCtx.cc: 160: FAILED assert(image_watcher == __null) when opening nonexistent snapshotResolvedPrashant DActions
Actions #1

Updated by Mykola Golub almost 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Jason Dillaman almost 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Patrick Donnelly almost 6 years ago

  • Copied to Backport #24698: mimic: ImageCtx.cc: 160: FAILED assert(image_watcher == __null) when opening nonexistent snapshot added
Actions #4

Updated by Nathan Cutler almost 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF