librbd: fix crash when opening nonexistent snapshot

Fixes: http://tracker.ceph.com/issues/24637
Signed-off-by: Mykola Golub <mgolub@suse.com>
(cherry picked from commit 70936c3bb5c281eed1c0bb5e26337efdedfa1e06)